--- a/CloudAccount/app/src/main/res/layout/inventor.xml
+++ b/CloudAccount/app/src/main/res/layout/inventor.xml
@@ -1,35 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="horizontal">
+    android:id="@+id/mobile_navigation"
+    app:startDestination="@+id/first_activity" android:layout_height="">
+
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
         <com.google.android.material.tabs.TabItem
             android:id="@+id/mingxi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/contacts"/>
+            android:icon="@drawable/contacts" />
+
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:icon="@drawable/amount_color" />
+
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/more"/>
+            android:icon="@drawable/more" />
+
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/community"/>
+            android:icon="@drawable/community" />
+
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/my"/>
+            android:icon="@drawable/my" />
     </com.google.android.material.tabs.TabLayout>
 
-</LinearLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"></androidx.viewpager.widget.ViewPager>
+
+</com.google.android.material.navigation.NavigationView>
